slides/exercises/31-kctl-ing-create/solution/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dumpster-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
  labels:
    workshop: "true"
spec:
  rules:
  - host: kaluzny.fredns.kaluzny.io
    http:
      paths:
      - pathType: Prefix
        path: "/v1"
        backend:
          service:
            name: svc-v1
            port:
              number: 80
  - host: kaluzny.fredns.kaluzny.io
    http:
      paths:
      - pathType: Prefix
        path: "/v2"
        backend:
          service:
            name: svc-v2
            port:
              number: 80
  - host: kaluzny.fredns.kaluzny.io
    http:
      paths:
      - pathType: Prefix
        path: "/v3"
        backend:
          service:
            name: svc-v3
            port:
              number: 80
